test/subjects/errors/bad_cast.php
<?php

	$x = (object
	) $y; // { phc-error: syntax error, unexpected VARIABLE }

?>
